kustomize/istio-addons/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
spec:
  parentRefs:
    - name: gateway
      namespace: ngf-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          port: 20001
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - name: tracing
          port: 80
